--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./public/profile_image-removebg-preview.png" />
+    <link rel="icon" type="image" href="@/assets/profile_image-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/a9a136fff2.js" crossorigin="anonymous"></script>
     <title>Laura Valdivia</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
